# Copyright (C) 2018  Red Hat, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published
# by the Free Software Foundation; either version 2.1 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

CLEANFILES = *~

configdir           = $(sysconfdir)/$(PACKAGE_NAME)/profile.d
dist_config_DATA    = \
	almalinux.conf \
	centos.conf \
	circle.conf \
	fedora-designsuite.conf \
	fedora-eln.conf \
	fedora-iot.conf \
	fedora-kde.conf \
	fedora-kinoite.conf \
	fedora-sericea.conf \
	fedora-server.conf \
	fedora-silverblue.conf \
	fedora-workstation.conf \
	fedora.conf \
	navix.conf \
	ovirt.conf \
	rhel.conf \
	rhvh.conf \
	rocky.conf \
	scientific-linux.conf \
	virtuozzo-linux.conf


MAINTAINERCLEANFILES = Makefile.in
